--- a/src/main/resources/static/404.html
+++ b/src/main/resources/static/404.html
@@ -4,28 +4,29 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.DkeLNfLA.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BIrZ9c6Y.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B6A7qSj-.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/4akn0Djb.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.DPDcWEAS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Bwh7HNeK.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/Dl3Obi_5.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/DJL3TWie.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.3QvJUT-q.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CnIobgbD.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B-ObWiSM.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/B6wUNAYx.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BcMwIlZU.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/G7wJoEgn.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/VoYWeTzl.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/QypZ2E6G.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BLEcV3VJ.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_o5in4n = {
+					__sveltekit_zp433t = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.DkeLNfLA.js"),
-						import("/_app/immutable/entry/app.DPDcWEAS.js")
+						import("/_app/immutable/entry/start.3QvJUT-q.js"),
+						import("/_app/immutable/entry/app.BcMwIlZU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
