implemented auto complete

--- a/src/main/resources/static/404.html
+++ b/src/main/resources/static/404.html
@@ -4,29 +4,29 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.3QvJUT-q.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/CnIobgbD.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B-ObWiSM.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/B6wUNAYx.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BcMwIlZU.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/G7wJoEgn.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/VoYWeTzl.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/QypZ2E6G.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/BLEcV3VJ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Cw-4AzGf.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BNyJGqFZ.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/Dp1UfO3K.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/CC5ctIAI.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.CETdFOtq.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DY8_h7Vv.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/DJ45T59b.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BkctEJ04.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/BhdjjkGV.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_zp433t = {
+					__sveltekit_jpzyqd = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.3QvJUT-q.js"),
-						import("/_app/immutable/entry/app.BcMwIlZU.js")
+						import("/_app/immutable/entry/start.Cw-4AzGf.js"),
+						import("/_app/immutable/entry/app.CETdFOtq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
